--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
 
     function boo(data){
     var words=[];
+    console.log(data);
     for(var k in data){
-      var n={}
+      var n={};
       n['text']=k;
       n['size']=data[k];
       if (Math.log(data[k])!=0)
-        words.push(n)
+        words.push(n);
     }
 
     words.sort(function (a, b) {
@@ -57,24 +58,23 @@
     // a must be equal to b
     return 0;
     });
-
-    avg=0
+    console.log(words);
+    avg=0;
     for (i=0;i<3;i++){
       avg+=words[i].size;
     }
     avg=avg/3;
 
-    for(i=0;i<100;i++){
+    for(i=0;i<80;i++){
       words[i].size=words[i].size*(110/avg);
     }
-
     d3.layout.cloud().size([1400,600])
-            .words(words.slice(1,100))
+            .words(words.slice(1,80))
             .rotate(0)
             .fontSize(function(d) { return d.size; })
             .on("end", draw)
             .start();
-          }
+    }
 
     function draw(words) {
         var svg=d3.select("#word_cloud").append("svg")
